# Projekt-JIPP2

./: .gitignore  CMakeLists.txt  Doxyfile
doc/: SMartArray.md
src/app/: data.cpp  data.h  handler.cpp  handler.h  main.cpp  tests.h  tui.cpp  tui.h
src/smartArray/: SmartArray.cpp  SmartArray.h
tests/: test_SmartArray.cpp
